--- a/quickcv/templates/resume.html
+++ b/quickcv/templates/resume.html
@@ -13,38 +13,38 @@
            <p class="bold"> {{name}}</p>
            <p class="regular">{{job}}</p>
          </div>
-         <ul>
-           <li>
+         <ul >
+           <li class="left-info">
              <div class="icon">
-               <i class="fas fa-map-signs"></i>
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
              </div>
              {# address #}
              <div class="data">
-               {{address}} <br />
+               <p class="address">{{address}}</p>
              </div>
            </li>
-           <li>
+           <li >
              <div class="icon">
-               <i class="fas fa-mobile-alt"></i>
+              <i class="fa fa-phone" aria-hidden="true"></i>
              </div>
              {# phone #}
              <div class="data">
                {{phone_number}}
              </div>
            </li>
-           <li>
+           <li >
              <div class="icon">
-               <i class="fas fa-envelope"></i>
+              <i class="fa fa-envelope" aria-hidden="true"></i>
              </div>
              {# email #}
              <div class="data">
                {{email}}
              </div>
            </li>
-           <li>
+           <li >
              <div class="icon">
-               <i class="fab fa-weebly"></i>
-             </div>
+              <i class="fa fa-github" aria-hidden="true"></i> 
+            </div>
              {#  website #}
              <div class="data">
                {{website}}
@@ -58,7 +58,7 @@
            <p class="bold">skill's</p>
          </div>
          <ul>
-           <li>
+           <li >
              <div class="skill_name">
                {{skill1}}
              </div>
@@ -67,7 +67,7 @@
              </div>
              <div class="skill_per">80%</div>
            </li>
-           <li>
+           <li >
              <div class="skill_name">
                {{skill2}}
              </div>
@@ -76,7 +76,7 @@
              </div>
              <div class="skill_per">70%</div>
            </li>
-           <li>
+           <li >
              <div class="skill_name">
               {{skill3}}
             </div>
@@ -85,7 +85,7 @@
              </div>
              <div class="skill_per">90%</div>
            </li>
-           <li>
+           <li >
              <div class="skill_name">
               {{skill3}}
              </div>
@@ -94,7 +94,7 @@
              </div>
              <div class="skill_per">60%</div>
            </li>
-           <li>
+           <li >
              <div class="skill_name">
               {{skill4}}
              </div>
@@ -111,7 +111,7 @@
            <p class="bold">Social</p>
          </div>
          <ul>
-           <li>
+           <li >
              <div class="icon">
                <i class="fab fa-twitter-square"></i>
              </div>
@@ -120,7 +120,7 @@
                <p>{{twitter}}</p>
              </div>
            </li>
-           <li>
+           <li >
              <div class="icon">
                <i class="fab fa-youtube"></i>
              </div>
@@ -129,7 +129,7 @@
                <p>{{ytb}}</p>
              </div>
            </li>
-           <li>
+           <li >
              <div class="icon">
                <i class="fab fa-linkedin"></i>
              </div>
@@ -146,7 +146,7 @@
           <p class="bold">LANGUAGES</p>
         </div>        
         <ul>
-          <li>
+          <li >
             <div class="icon">
               <i class="fa fa-language" aria-hidden="true"></i>
             </div>
@@ -154,7 +154,7 @@
               <p class="semi-bold">{{lang1}}</p>
             </div>
           </li>   
-          <li>
+          <li >
             <div class="icon">
               <i class="fa fa-language" aria-hidden="true"></i>
             </div>
@@ -170,7 +170,7 @@
     {# ABOUT US #}
     <div class="resume_item resume_about">
         <div class="title">
-           <p class="bold">About us</p>
+           <p class="bold">About Me</p>
          </div>
         <p>{{about}}</p>
     </div>
