--- a/quickcv/static/builder/css/style.css
+++ b/quickcv/static/builder/css/style.css
@@ -11,8 +11,9 @@
 body {
   background: #585c68;
   font-size: 14px;
+  font-weight: 500;
   line-height: 22px;
-  color: #555555;
+  color: #000000;
 }
 
 .bold {
@@ -22,7 +23,7 @@ body {
 }
 
 .semi-bold {
-  font-weight: 500;
+  font-weight: 650;
   font-size: 16px;
 }
 
@@ -34,6 +35,7 @@ body {
 }
 
 .resume .resume_left {
+
   width: 280px;
   background: #0bb5f4;
 }
@@ -50,6 +52,7 @@ body {
 
 .resume .resume_left .resume_content {
   padding: 0 25px;
+  display: inline-block;
 }
 
 .resume .title {
@@ -232,3 +235,4 @@ body {
 .resume .resume_right .resume_hobby ul li:last-child:before {
   display: none;
 }
+.address{font-style: italic;}
